# where-the-plow

./: .env.dist  .gitignore  CHANGELOG.md  README.md  cli.py  compose.yml  pyproject.toml
.github/workflows/: release-agent.yml
agent/: .goreleaser.yml  Dockerfile  README.md  build.sh  client.go  config.go  crypto.go  fetch.go  go.mod  k8s.yaml  main.go  service.go
agent/cmd/signtest/: main.go
docs/: agent-system.md
docs/plans/: 2026-02-23-coverage-performance.md  2026-02-23-migration-system.md  2026-02-24-deckgl-coverage-migration.md  2026-02-25-distributed-agent-design.md  2026-02-25-distributed-agent-impl.md  2026-02-25-region-video-export-design.md  2026-02-25-region-video-export-impl.md  2026-02-26-smart-video-playback-design.md  2026-02-26-smart-video-playback-impl.md
docs/research/: cbs-geotab.md  paradise-hitechmaps.md
src/where_the_plow/: admin_routes.py  agent_auth.py  agent_routes.py  cache.py  client.py  collector.py  config.py  coordinator.py  db.py  main.py  migrate.py  models.py  routes.py  snapshot.py  source_config.py
src/where_the_plow/migrations/: 001_initial_schema.py  002_add_source_columns.py  003_add_agents_table.py  003_add_signup_name.py  004_agent_status.py  005_agent_consecutive_failures.py  006_add_signup_name.py  007_fix_signups_sequence.py
src/where_the_plow/static/: app.js  (+2 more)
tests/: test_admin_routes.py  test_agent_auth.py  test_agent_routes.py  test_agents_db.py  test_client.py  test_collector.py  test_config.py  test_coordinator.py  test_crypto_compat.py  test_db.py  test_migrate.py  test_routes.py  test_snapshot.py
(+3 files in other folders)
