[project]
name = "where-the-plow"
version = "0.1.0"
description = "St. John's plow tracker — data collection and API"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pytz>=2025.2",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",

]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/where_the_plow"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
